# monasca-ui

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  ChangeLog  README.md  README.rst  lower-constraints.txt  manage.py  mkdocs.yml  monasca_policy.json.sample  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini  urls.py  views.py
config/: local_settings.py
cosmos/overcloud/: dashboard.py
debian/: changelog  control
enabled/: _40_cosmos.py  _45_monitoring_panel_group.py  _50_admin_add_monitoring_panel.py  _60_admin_add_notification_panel.py
grafana-dashboards/: drilldown.js
monitoring/: constants.py  dashboard.py  forms.py  panel.py  tables.py  urls.py  views.py
monitoring/alarmdefs/: constants.py  forms.py  panel.py  tables.py  tests.py  urls.py  views.py  workflows.py
monitoring/alarmdefs/templates/alarmdefs/: _create.html  _create_ad_details_help.html  _create_ad_expression_help.html  _create_ad_notification_help.html  _detail.html  _edit.html  alarm.html  alarm_history.html  create.html  detail.html  edit.html  expression_field.html  expression_step.html  match_by_field.html  notification_field.html  notification_step.html  workflow_step.html
monitoring/alarms/: constants.py  forms.py  panel.py  tables.py  tests.py  urls.py  views.py
monitoring/alarms/templates/alarms/: _create.html  _edit.html  _filter.html  _scripts.html  alarm.html  alarm_history.html  alarm_meter.html  create.html  detail.html  edit.html  expression_field.html  filter.html  index.html  monitor.html  monitorng.html  newmonitor.html
monitoring/api/: __init__.py  client.py  monitor.py  monitoring.py
monitoring/conf/: monitoring_policy.json  monitoring_policy.yaml
monitoring/config/: local_settings.py
monitoring/disabled/: _70_remove_monasca_notification_panel.py
monitoring/enabled/: _50_admin_add_monitoring_panel.py
monitoring/locale/: django.pot
monitoring/locale/de/LC_MESSAGES/: django.po  djangojs.po
monitoring/notifications/: constants.py  forms.py  panel.py  tables.py  tests.py  urls.py  views.py
monitoring/overview/: constants.py  panel.py  tests.py  urls.py  views.py
monitoring/templates/monitoring/: _scripts.html  alarm.html  index.html  monitor.html  monitorng.html  newmonitor.html
monitoring/test/: alarm_tables.py  client_tests.py  helpers.py  settings.py  test_alarm_tables.py  test_client.py  urls.py
monitoring/test/test_data/: exceptions.py  monitoring_data.py  utils.py
releasenotes/notes/: drop-py-2-7-4bed1d8bdb530b1d.yaml
static/monitoring/js/: controllers.js  directives.js  health.html
templates/monitoring/: alert.html  monitor.html  monitorng.html
tools/: install_venv.py  tox_install.sh
(+49 files in other folders)
